@@ -1,5 +1,9 @@
 2008-08-04  Vincent Untz  <vuntz@gnome.org>
 
+	* panel-run-dialog.c: (panel_run_dialog_execute): s/url/uri/
+
+2008-08-04  Vincent Untz  <vuntz@gnome.org>
+
 	Mount volumes if needed in panel_show_*
 	Based on patch by Matthias Clasen <mclasen@redhat.com>
 	Fix bug #529243
